fdo#31405 CommandType is a LONG, so use a sal_Int32 to retrieve it

Else, operator>>= flat out refuses to extract it, even though the particular value in this particular call would fit.
Also OSL_VERIFY the result of >>= (instead of ignoring it) to facilitate future detection of similar problem

Change-Id: I859c38c3589dc9e9ef5bdd882663aa3386a43237